--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 <body>
     <section class="top-banner">
         <div class="half-wide">
-            <h1>Hello I'm</h1>
-            <h1>Md.Saddam Hossain</h1>
-            <p>Dolores ipsum no ipsum stet sanctus tempor ea ipsum dolores, et magna eos lorem aliquyam ea aliquyam tempor diam, est.</p>
-            <a href="https://www.facebook.com/soft.dev3">HIRE ME!</a>
+            <h1 class="h1-font-size">Hello I'm</h1>
+            <h1 class="name-collor">Md.Saddam Hossain</h1> <br>
+            <p>Dolores ipsum no ipsum stet sanctus tempor ea ipsum dolores, et magna eos lorem aliquyam ea aliquyam tempor diam, est.</p> <br>
+            <a class="button" target="_blank" href="https://www.facebook.com/soft.dev3">HIRE ME!</a>
         </div>
         <div class="half-wide">
-            
+            <img src="image/completed image/fast-div.png" alt="first image">
+        </div>
+    </section>
+    <section class="middel-bannar">
+        <div class="half-wide">
+            <img src="image/completed image/second-div.png" alt="image">
+        </div>
+        <div class="half-wide">
+            <h1 class="h1-font-size">Biography</h1>
+            <p>Kasd sadipscing vero amet accusam aliquyam invidunt dolore stet, ipsum sit diam tempor labore dolores no justo clita justo. Diam dolore ea tempor accusam labore duo ipsum amet sadipscing. Eirmod duo ipsum dolor duo vero sea diam, lorem gubergren vero.</p> <br>
+            <a class="button" target="_blank" href="https://soft-dev3.github.io/First-Project/">Download CV</a>
         </div>
     </section>
 </body>
