--- a/index.html
+++ b/index.html
@@ -31,5 +31,28 @@
             <a class="button" target="_blank" href="https://soft-dev3.github.io/First-Project/">Download CV</a>
         </div>
     </section>
+    <section class="last-bannar">
+        <h1 class="last-title">My Latest Work</h1><br><br>
+        <div class="third-half">
+            <img class="work" src="image/latest-work/work-1.png" alt="image">
+        </div>
+        <div class="third-half">
+            <img class="work" src="image/latest-work/work-2.jpg" alt="image">
+        </div>
+        <div class="third-half">
+            <img class="work" src="image/latest-work/work-3.jpg" alt="image">
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footer-div1">
+            <h1>What Client Are Say</h1>
+            <h3>soft.dev3</h3>
+            <h3>Founder & CDE MD.Saddam</h3>
+            <p>Gubergren diam kasd lorem lorem invidunt voluptua est sadipscing et..</p>
+        </div>
+        <div class="another-button">
+            
+        </div>
+    </section>
 </body>
 </html>
