--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>Gubergren diam kasd lorem lorem invidunt voluptua est sadipscing et..</p>
         </div>
         <div class="another-button">
-            
+            <p>Click me for more information</p>
         </div>
     </section>
 </body>
